Réalisation préliminaire du formulaire de la page d'accueil

--- a/index.html
+++ b/index.html
@@ -17,6 +17,15 @@
         <img src="./images/logo/ohmyfood.png" alt="Logo Ohmyfood">
     </header>
 
+    <main>
+        <form action="#" method="post">
+            <input type="search" name="recherche" id="recherche" placeholder="Paris, Belleville">  <!-- <i class="fas fa-map-marker-alt"></i> -->
+            <h1>Réservez le menu qui vous convient</h1>
+            <p>Découvrez des restaurants d'exeptions, séléctionnés par nos soins</p>
+            <button type="submit">Explorez nos restaurants</button>
+        </form>
+    </main>
+
     <footer>
         <h3>ohmyfood</h3>
         <ul>
