Réalisation préliminaire du fonctionnement de la page d'accueil

--- a/index.html
+++ b/index.html
@@ -22,8 +22,28 @@
             <input type="search" name="recherche" id="recherche" placeholder="Paris, Belleville">  <!-- <i class="fas fa-map-marker-alt"></i> -->
             <h1>Réservez le menu qui vous convient</h1>
             <p>Découvrez des restaurants d'exeptions, séléctionnés par nos soins</p>
-            <button type="submit">Explorez nos restaurants</button>
+            <button type="submit" class="submit-button">Explorez nos restaurants</button>
         </form>
+        <section id="fonctionnement">
+            <h2>Fonctionnement</h2>
+            <div>
+                <a class="steps">
+                    <p class="steps_number">1</p>
+                    <i class="fas fa-mobile-alt"></i>
+                    <p class="steps_definition">Choisissez un restaurant</p>
+                </a>
+                <a class="steps">
+                    <p class="steps_number">2</p>
+                    <i class="fas fa-list-ul"></i>
+                    <p class="steps_definition">Composez votre menu</p>
+                </a>
+                <a class="steps">
+                    <p class="steps_number">3</p>
+                    <i class="fas fa-store"></i>
+                    <p class="steps_definition">Dégustez au restaurant</p>
+                </a>
+            </div>
+        </section>
     </main>
 
     <footer>
