--- a/index.html
+++ b/index.html
@@ -44,6 +44,71 @@
                 </a>
             </div>
         </section>
+        <section id="restaurants">
+            <h2>Restaurants</h2>
+            <div>
+                <a class="restaurants_card">
+                    <div class="restaurants_card_img">
+                        <img src="./images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="">
+                    </div>
+                    <div class="restaurants_card_description">
+                        <div class="restaurants_card_description_name">
+                            <h3>La palette du goût</h3>
+                            <p>Ménilmontant</p>
+                        </div>
+                        <div class="restaurants_card_description_like">
+                            <i class="far fa-heart"></i>
+                            <i class="fas fa-heart hover-heart"></i>
+                        </div>
+                    </div>
+                </a>
+                <a class="restaurants_card">
+                    <div class="restaurants_card_img">
+                        <img src="./images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="">
+                    </div>
+                    <div class="restaurants_card_description">
+                        <div class="restaurants_card_description_name">
+                            <h3>La note enchanntée</h3>
+                            <p>Charonne</p>
+                        </div>
+                        <div class="restaurants_card_description_like">
+                            <i class="far fa-heart"></i>
+                            <i class="fas fa-heart hover-heart"></i>
+                        </div>
+                    </div>
+                </a>
+                <a class="restaurants_card">
+                    <div class="restaurants_card_img">
+                        <img src="./images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="">
+                    </div>
+                    <div class="restaurants_card_description">
+                        <div class="restaurants_card_description_name">
+                            <h3>À la française</h3>
+                            <p>Cité Rouge</p>
+                        </div>
+                        <div class="restaurants_card_description_like">
+                            <i class="far fa-heart"></i>
+                            <i class="fas fa-heart hover-heart"></i>
+                        </div>
+                    </div>
+                </a>
+                <a class="restaurants_card">
+                    <div class="restaurants_card_img">
+                        <img src="./images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="">
+                    </div>
+                    <div class="restaurants_card_description">
+                        <div class="restaurants_card_description_name">
+                            <h3>Le délice des sens</h3>
+                            <p>Folie-Méricourt</p>
+                        </div>
+                        <div class="restaurants_card_description_like">
+                            <i class="far fa-heart"></i>
+                            <i class="fas fa-heart hover-heart"></i>
+                        </div>
+                    </div>
+                </a>
+            </div>
+        </section>
     </main>
 
     <footer>
