--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
     <main>
         <form action="#" method="post">
-            <input type="search" name="recherche" id="recherche" placeholder="Paris, Belleville">  <!-- <i class="fas fa-map-marker-alt"></i> -->
+            <input type="search" name="recherche" id="recherche" placeholder="&#xf3c5;   Paris, Belleville">  <!-- <i class="fas fa-map-marker-alt"></i> -->
             <h1>Réservez le menu qui vous convient</h1>
             <p>Découvrez des restaurants d'exeptions, séléctionnés par nos soins</p>
             <button type="submit" class="submit-button">Explorez nos restaurants</button>
@@ -27,17 +27,17 @@
         <section id="fonctionnement">
             <h2>Fonctionnement</h2>
             <div>
-                <a class="steps">
+                <a href="#" class="steps">
                     <p class="steps_number">1</p>
                     <i class="fas fa-mobile-alt"></i>
                     <p class="steps_definition">Choisissez un restaurant</p>
                 </a>
-                <a class="steps">
+                <a href="#" class="steps">
                     <p class="steps_number">2</p>
                     <i class="fas fa-list-ul"></i>
                     <p class="steps_definition">Composez votre menu</p>
                 </a>
-                <a class="steps">
+                <a href="#" class="steps">
                     <p class="steps_number">3</p>
                     <i class="fas fa-store"></i>
                     <p class="steps_definition">Dégustez au restaurant</p>
@@ -47,8 +47,11 @@
         <section id="restaurants">
             <h2>Restaurants</h2>
             <div>
-                <a class="restaurants_card">
+                <a href="#" class="restaurants_card">
                     <div class="restaurants_card_img">
+                        <div class="nouveau">
+                            <p>Nouveau</p>
+                        </div>
                         <img src="./images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="">
                     </div>
                     <div class="restaurants_card_description">
@@ -62,8 +65,11 @@
                         </div>
                     </div>
                 </a>
-                <a class="restaurants_card">
+                <a href="#" class="restaurants_card">
                     <div class="restaurants_card_img">
+                        <div class="nouveau">
+                            <p>Nouveau</p>
+                        </div>
                         <img src="./images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="">
                     </div>
                     <div class="restaurants_card_description">
@@ -77,7 +83,7 @@
                         </div>
                     </div>
                 </a>
-                <a class="restaurants_card">
+                <a href="#" class="restaurants_card">
                     <div class="restaurants_card_img">
                         <img src="./images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="">
                     </div>
@@ -92,7 +98,7 @@
                         </div>
                     </div>
                 </a>
-                <a class="restaurants_card">
+                <a href="#" class="restaurants_card">
                     <div class="restaurants_card_img">
                         <img src="./images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="">
                     </div>
