Initialisation des 4 pages de restaurant. header et footer intégré. lien aller et retour entre page d'accueil et des restaurant.

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         <section id="restaurants">
             <h2>Restaurants</h2>
             <div>
-                <a href="#" class="restaurants_card">
+                <a href="./pages/la_palette_du_gout.html" class="restaurants_card">
                     <div class="restaurants_card_img">
                         <div class="nouveau">
                             <p>Nouveau</p>
@@ -65,7 +65,7 @@
                         </div>
                     </div>
                 </a>
-                <a href="#" class="restaurants_card">
+                <a href="./pages/la_note_enchantee.html" class="restaurants_card">
                     <div class="restaurants_card_img">
                         <div class="nouveau">
                             <p>Nouveau</p>
@@ -83,7 +83,7 @@
                         </div>
                     </div>
                 </a>
-                <a href="#" class="restaurants_card">
+                <a href="./pages/a_la_francaise.html" class="restaurants_card">
                     <div class="restaurants_card_img">
                         <img src="./images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="">
                     </div>
@@ -98,7 +98,7 @@
                         </div>
                     </div>
                 </a>
-                <a href="#" class="restaurants_card">
+                <a href="./pages/le_delice_des_sens.html" class="restaurants_card">
                     <div class="restaurants_card_img">
                         <img src="./images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="">
                     </div>
