partie en-tête des page restaurants réalisé

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                             <h3>La palette du goût</h3>
                             <p>Ménilmontant</p>
                         </div>
-                        <div class="restaurants_card_description_like">
+                        <div class="like">
                             <i class="far fa-heart"></i>
                             <i class="fas fa-heart hover-heart"></i>
                         </div>
@@ -77,7 +77,7 @@
                             <h3>La note enchanntée</h3>
                             <p>Charonne</p>
                         </div>
-                        <div class="restaurants_card_description_like">
+                        <div class="like">
                             <i class="far fa-heart"></i>
                             <i class="fas fa-heart hover-heart"></i>
                         </div>
@@ -92,7 +92,7 @@
                             <h3>À la française</h3>
                             <p>Cité Rouge</p>
                         </div>
-                        <div class="restaurants_card_description_like">
+                        <div class="like">
                             <i class="far fa-heart"></i>
                             <i class="fas fa-heart hover-heart"></i>
                         </div>
@@ -107,7 +107,7 @@
                             <h3>Le délice des sens</h3>
                             <p>Folie-Méricourt</p>
                         </div>
-                        <div class="restaurants_card_description_like">
+                        <div class="like">
                             <i class="far fa-heart"></i>
                             <i class="fas fa-heart hover-heart"></i>
                         </div>
