--- a/pages/la_note_enchantee.html
+++ b/pages/la_note_enchantee.html
@@ -21,6 +21,17 @@
     </header>
 
     <main>
+        <section id="restaurant-header" class="la-note-enchantee-image">
+            <img src="../images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="">
+            <div id="nom-du-restaurant">
+                <h1>La note enchanntée</h1>
+                
+                <div class="like">
+                    <i class="far fa-heart"></i>
+                    <i class="fas fa-heart hover-heart"></i>
+                </div>
+            </div>
+        </section>
 
     </main>
 
