--- a/pages/la_palette_du_gout.html
+++ b/pages/la_palette_du_gout.html
@@ -21,6 +21,29 @@
     </header>
 
     <main>
+        <section id="restaurant-header">
+            <img src="../images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="">
+            <div id="nom-du-restaurant">
+                <h1>La palette du goût</h1>
+                
+                <div class="like">
+                    <i class="far fa-heart"></i>
+                    <i class="fas fa-heart hover-heart"></i>
+                </div>
+            </div>
+        </section>
+        <section id="service">
+            <div class="entrees">
+
+            </div>
+            <div class="plats">
+
+            </div>
+            <div class="desserts">
+
+            </div>
+
+        </section>
 
     </main>
 
