--- a/pages/a_la_francaise.html
+++ b/pages/a_la_francaise.html
@@ -21,6 +21,17 @@
     </header>
 
     <main>
+        <section id="restaurant-header">
+            <img src="../images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="">
+            <div id="nom-du-restaurant">
+                <h1>À la française</h1>
+                
+                <div class="like">
+                    <i class="far fa-heart"></i>
+                    <i class="fas fa-heart hover-heart"></i>
+                </div>
+            </div>
+        </section>
 
     </main>
 
