--- a/pages/le_delice_des_sens.html
+++ b/pages/le_delice_des_sens.html
@@ -21,6 +21,17 @@
     </header>
 
     <main>
+        <section id="restaurant-header">
+            <img src="../images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="">
+            <div id="nom-du-restaurant">
+                <h1>Le délice des sens</h1>
+                
+                <div class="like">
+                    <i class="far fa-heart"></i>
+                    <i class="fas fa-heart hover-heart"></i>
+                </div>
+            </div>
+        </section>
 
     </main>
 
