--- a/pages/la_palette_du_gout.html
+++ b/pages/la_palette_du_gout.html
@@ -20,7 +20,7 @@
         <img src="../images/logo/ohmyfood.png" alt="Logo Ohmyfood">
     </header>
 
-    <main>
+    <main id="menu">
         <section id="restaurant-header">
             <img src="../images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="">
             <div id="nom-du-restaurant">
@@ -32,18 +32,170 @@
                 </div>
             </div>
         </section>
-        <section id="service">
-            <div class="entrees">
+        <section id="services">
+            <div class="service">
+                <div class="service_titre">
+                    <h2>ENTRÉES</h2>
+                    <div class="soulignement"></div>
+                </div>
+                <div class="service_plats">
 
+                    <div class="carte-de-plat">
+                        <div class="content">
+                            <h2>Fricassée d'escargot</h2>
+                            <p>Au piment d'Espelette</p>
+                        </div>
+                        <div class="right">
+                            <div class="prix">
+                                <p>25€</p>
+                            </div>
+                            <div class="check">
+                                <i class="fas fa-check-circle"></i>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="carte-de-plat">
+                        <div class="content">
+                            <h2>Foie gras de canard mi-cuit</h2>
+                            <p>Et ses copeaux de truffe noire</p>
+                        </div>
+                        <div class="right">
+                            <div class="prix">
+                                <p>35€</p>
+                            </div>
+                            <div class="check">
+                                <i class="fas fa-check-circle"></i>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="carte-de-plat">
+                        <div class="content">
+                            <h2>Oeuf au plat</h2>
+                            <p>Assaisonné à la truffe sur lit de caviar</p>
+                        </div>
+                        <div class="right">
+                            <div class="prix">
+                                <p>20€</p>
+                            </div>
+                            <div class="check">
+                                <i class="fas fa-check-circle"></i>
+                            </div>
+                        </div>
+                    </div>
+
+                </div>
             </div>
-            <div class="plats">
 
+            <div class="service">
+                <div class="service_titre">
+                    <h2>PLATS</h2>
+                    <div class="soulignement"></div>
+                </div>
+                <div class="service_plats">
+
+                    <div class="carte-de-plat">
+                        <div class="content">
+                            <h2>Filet de boeuf aux herbes</h2>
+                            <p>Accompagné de sa ribambelle de légumes</p>
+                        </div>
+                        <div class="right">
+                            <div class="prix">
+                                <p>40€</p>
+                            </div>
+                            <div class="check">
+                                <i class="fas fa-check-circle"></i>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="carte-de-plat">
+                        <div class="content">
+                            <h2>Parmentier de queue de boeuf</h2>
+                            <p>À la truffe noire sur sa purée de panais</p>
+                        </div>
+                        <div class="right">
+                            <div class="prix">
+                                <p>35€</p>
+                            </div>
+                            <div class="check">
+                                <i class="fas fa-check-circle"></i>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="carte-de-plat">
+                        <div class="content">
+                            <h2>Filet de turbot</h2>
+                            <p>Aux agrumes</p>
+                        </div>
+                        <div class="right">
+                            <div class="prix">
+                                <p>44€</p>
+                            </div>
+                            <div class="check">
+                                <i class="fas fa-check-circle"></i>
+                            </div>
+                        </div>
+                    </div>
+
+                </div>
             </div>
-            <div class="desserts">
 
+            <div class="service">
+                <div class="service_titre">
+                    <h2>DESSERTS</h2>
+                    <div class="soulignement"></div>
+                </div>
+                <div class="service_plats">
+
+                    <div class="carte-de-plat">
+                        <div class="content">
+                            <h2>Paris-Brest</h2>
+                            <p>Revisité</p>
+                        </div>
+                        <div class="right">
+                            <div class="prix">
+                                <p>18€</p>
+                            </div>
+                            <div class="check">
+                                <i class="fas fa-check-circle"></i>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="carte-de-plat">
+                        <div class="content">
+                            <h2>Macaron au chocolat d'exception </h2>
+                            <p>Et glace à la vanille de Madagascar</p>
+                        </div>
+                        <div class="right">
+                            <div class="prix">
+                                <p>22€</p>
+                            </div>
+                            <div class="check">
+                                <i class="fas fa-check-circle"></i>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="carte-de-plat">
+                        <div class="content">
+                            <h2>Mousse au chocolat </h2>
+                            <p>Au piment d'Espelette et à la truffe noire</p>
+                        </div>
+                        <div class="right">
+                            <div class="prix">
+                                <p>23€</p>
+                            </div>
+                            <div class="check">
+                                <i class="fas fa-check-circle"></i>
+                            </div>
+                        </div>
+                    </div>
+
+                </div>
             </div>
 
         </section>
+        <div id="commander">
+            <button class="submit-button">Commander</button>
+        </div>
 
     </main>
 
