Media querie pour tablette et desktop réalisé

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         </section>
         <section id="restaurants">
             <h2>Restaurants</h2>
-            <div>
+            <div class="restaurant">
                 <a href="./pages/la_palette_du_gout.html" class="restaurants_card">
                     <div class="restaurants_card_img">
                         <div class="nouveau">
