--- a/index.html
+++ b/index.html
@@ -12,6 +12,11 @@
 
 </head>
 <body>
+    <div class="chargement">
+        <div class="chargement_animation">
+            <p>Chargement</p>
+        </div>
+    </div>
 
     <header>
         <img src="./images/logo/ohmyfood.png" alt="Logo Ohmyfood">
@@ -19,7 +24,7 @@
 
     <main>
         <form action="#" method="post">
-            <input type="search" name="recherche" id="recherche" placeholder="&#xf3c5;   Paris, Belleville">  <!-- <i class="fas fa-map-marker-alt"></i> -->
+            <input type="search" name="recherche" id="recherche" placeholder="&#xf3c5;   Paris, Belleville">
             <h1>Réservez le menu qui vous convient</h1>
             <p>Découvrez des restaurants d'exeptions, séléctionnés par nos soins</p>
             <button type="submit" class="submit-button">Explorez nos restaurants</button>
