Correction de couleur pour l'ombre de l'input de recherche

--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
             </div>
             <!-- Autre solution plus simple et esthétique d'implémenter le placeholder.
             par contre il y aura un avertissement W3C pour l'l'utilisation de l'unicode.
+            W3C : Warning  Document uses the Unicode Private Use Area(s), which should not be used in publicly exchanged documents. (Charmod C073)
            <input type="search" name="recherche" id="recherche" placeholder="&#xf3c5;   Paris, Belleville">    -->
             <h1>Réservez le menu qui vous convient</h1>
             <p>Découvrez des restaurants d'exeptions, séléctionnés par nos soins</p>
