Ajout de commentaire manquant dans les fichier html des page de restaurants.

--- a/pages/la_palette_du_gout.html
+++ b/pages/la_palette_du_gout.html
@@ -12,14 +12,14 @@
 
 </head>
 <body>
-
+    <!-- Partie header de la page  -->
     <header>
         <a href="../index.html">
             <i class="fas fa-arrow-left"></i>
         </a>
         <img src="../images/logo/ohmyfood.png" alt="Logo Ohmyfood">
     </header>
-
+    <!-- Partie principale de la page  -->
     <main id="menu">
         <section id="restaurant-header">
             <img src="../images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="">
@@ -32,6 +32,8 @@
                 </div>
             </div>
         </section>
+        <!-- La partie menu de la page -->
+        <!-- Les entrées -->
         <section id="services">
             <div class="service">
                 <div class="service_titre">
@@ -85,7 +87,7 @@
 
                 </div>
             </div>
-
+            <!-- Les plats principaux -->
             <div class="service">
                 <div class="service_titre">
                     <h2>PLATS</h2>
@@ -138,7 +140,7 @@
 
                 </div>
             </div>
-
+            <!-- Les desserts -->
             <div class="service">
                 <div class="service_titre">
                     <h2>DESSERTS</h2>
@@ -198,7 +200,7 @@
         </div>
 
     </main>
-
+    <!-- La partie Footer de la page -->
     <footer>
         <h3>ohmyfood</h3>
         <ul>
