--- a/pages/la_note_enchantee.html
+++ b/pages/la_note_enchantee.html
@@ -12,14 +12,14 @@
 
 </head>
 <body>
-
+    <!-- Partie header de la page  -->
     <header>
         <a href="../index.html">
             <i class="fas fa-arrow-left"></i>
         </a>
         <img src="../images/logo/ohmyfood.png" alt="Logo Ohmyfood">
     </header>
-
+    <!-- Partie principale de la page  -->
     <main id="menu">
         <section id="restaurant-header" class="la-note-enchantee">
             <img class="la-note-enchantee_image" src="../images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="">
@@ -32,6 +32,8 @@
                 </div>
             </div>
         </section>
+        <!-- La partie menu de la page -->
+        <!-- Les entrées -->
         <section id="services">
             <div class="service">
                 <div class="service_titre">
@@ -99,7 +101,7 @@
 
                 </div>
             </div>
-
+            <!-- Les plats principaux -->
             <div class="service">
                 <div class="service_titre">
                     <h2>PLATS</h2>
@@ -152,7 +154,7 @@
 
                 </div>
             </div>
-
+            <!-- Les desserts -->
             <div class="service">
                 <div class="service_titre">
                     <h2>DESSERTS</h2>
@@ -212,7 +214,7 @@
         </div>
 
     </main>
-
+    <!-- La partie Footer de la page -->
     <footer>
         <h3>ohmyfood</h3>
         <ul>
