Ajout des alt pour les images dans les fichier html

--- a/pages/a_la_francaise.html
+++ b/pages/a_la_francaise.html
@@ -22,7 +22,7 @@
     <!-- Partie principale de la page  -->
     <main id="menu">
         <section id="restaurant-header">
-            <img src="../images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="">
+            <img src="../images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="Photo d'un plat du restaurant, à la française">
             <div id="nom-du-restaurant">
                 <h1>À la française</h1>
                 
