--- a/pages/la_note_enchantee.html
+++ b/pages/la_note_enchantee.html
@@ -22,7 +22,7 @@
     <!-- Partie principale de la page  -->
     <main id="menu">
         <section id="restaurant-header" class="la-note-enchantee">
-            <img class="la-note-enchantee_image" src="../images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="">
+            <img class="la-note-enchantee_image" src="../images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="Photo d'un plat du restaurant, la note enchanntée">
             <div id="nom-du-restaurant">
                 <h1>La note enchanntée</h1>
                 
