--- a/pages/la_palette_du_gout.html
+++ b/pages/la_palette_du_gout.html
@@ -22,7 +22,7 @@
     <!-- Partie principale de la page  -->
     <main id="menu">
         <section id="restaurant-header">
-            <img src="../images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="">
+            <img src="../images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="Photo d'un plat du restaurant, la palette du goût">
             <div id="nom-du-restaurant">
                 <h1>La palette du goût</h1>
                 
