--- a/pages/le_delice_des_sens.html
+++ b/pages/le_delice_des_sens.html
@@ -22,7 +22,7 @@
     <!-- Partie principale de la page  -->
     <main id="menu">
         <section id="restaurant-header">
-            <img src="../images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="">
+            <img src="../images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="Photo d'un plat du restaurant, le délice des sens">
             <div id="nom-du-restaurant">
                 <h1>Le délice des sens</h1>
                 
