--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                         <div class="nouveau">
                             <p>Nouveau</p>
                         </div>
-                        <img src="./images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="">
+                        <img src="./images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="Photo d'un plat du restaurant, la palette du goût">
                     </div>
                     <div class="restaurants_card_description">
                         <div class="restaurants_card_description_name">
@@ -86,7 +86,7 @@
                         <div class="nouveau">
                             <p>Nouveau</p>
                         </div>
-                        <img src="./images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="">
+                        <img src="./images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="Photo d'un plat du restaurant, la note enchanntée">
                     </div>
                     <div class="restaurants_card_description">
                         <div class="restaurants_card_description_name">
@@ -101,7 +101,7 @@
                 </a>
                 <a href="./pages/a_la_francaise.html" class="restaurants_card">
                     <div class="restaurants_card_img">
-                        <img src="./images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="">
+                        <img src="./images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="Photo d'un plat du restaurant, à la française">
                     </div>
                     <div class="restaurants_card_description">
                         <div class="restaurants_card_description_name">
@@ -116,7 +116,7 @@
                 </a>
                 <a href="./pages/le_delice_des_sens.html" class="restaurants_card">
                     <div class="restaurants_card_img">
-                        <img src="./images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="">
+                        <img src="./images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="Photo d'un plat du restaurant, le délice des sens">
                     </div>
                     <div class="restaurants_card_description">
                         <div class="restaurants_card_description_name">
